[package]
name = "flags-rs"
version = "0.1.4"
edition = "2021"
license = "MIT"
keywords = ["flags", "feature-flags", "flags-gg"]
homepage = "https://flags.gg"
repository = "https://github.com/flags-gg/flags-rs"
readme = "readme.md"
description = "Rust Library for Flags.gg"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
rusqlite = { version = "0.28.0", features = ["bundled"], optional = true }
async-trait = "0.1"
chrono = "0.4"
serde_json = "1.0.140"

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.20.0"
tokio = { version = "1", features = ["full", "test-util", "sync"] }
wiremock = "0.6.3"
serial_test = "3.2.0"