[package]
name = "flags-rs"
version = "0.1.7"
edition = "2021"
license = "MIT"
keywords = ["flags", "feature-flags", "flags-gg"]
homepage = "https://flags.gg"
repository = "https://github.com/flags-gg/flags-rs"
readme = "readme.md"
description = "Rust Library for Flags.gg"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
async-trait = "0.1"
chrono = "0.4"
serde_json = "1.0.142"
tower = { version = "0.5", optional = true }
pin-project = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
http = { version = "1.0", optional = true }
http-body = { version = "1.0", optional = true }
http-body-util = { version = "0.1", optional = true }

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.21.0"
tokio = { version = "1", features = ["full", "test-util", "sync"] }
wiremock = "0.6.5"
serial_test = "3.2.0"
tower = { version = "0.5" }
http = "1.0"
http-body-util = "0.1"
bytes = "1.0"
env_logger = "0.11"

[features]
default = []
tower-middleware = ["tower", "pin-project", "futures", "http", "http-body", "http-body-util"]
